# ASPFuzz

./: .gitmodules  README.md
fuzzer/amd_sp/: .gitignore  Cargo.toml  Makefile.toml
fuzzer/amd_sp/bins/: .gitignore  README.md
fuzzer/amd_sp/src/: fuzzer.rs  main.rs  performance.rs
fuzzer/amd_sp/yaml/: ryzen_zen+_desktop_parse_asp_flash.yaml  ryzen_zen1_desktop_parse_asp_flash.yaml  ryzen_zen2_desktop_parse_asp_flash.yaml  ryzen_zen3_desktop_parse_asp_flash.yaml  ryzen_zentesla_parse_asp_flash.yaml
fuzzer/libasp/: Cargo.toml
fuzzer/libasp/src/: exception_handler.rs  gen_metadata.rs  initial_inputs.rs  lib.rs  reset_state.rs  tunneling.rs  yaml_conf.rs
script/: .gitignore  known_overflow_detector.py  metadata_analyser.py  qemu_run_debug.sh  requirements.txt  solutions2flashimg.py  stats2plot.py
